--- a/users/templates/users/view_user.html
+++ b/users/templates/users/view_user.html
@@ -10,7 +10,7 @@
     <h2>{{viewed_user.username}}</h2>
     <div class="col-lg-4">
         <img src="{{viewed_user.avatar.url}}" class="float-left mr-3" alt="" style="border-radius: 50%;" width="200"
-            height="200">
+            height="200" loading="lazy">
     </div>
 </div>
 <div class="media col-lg-5">
