--- a/chat/templates/chat/base.html
+++ b/chat/templates/chat/base.html
@@ -6,9 +6,10 @@
 
 <head>
     <!-- Google Adsense -->
-    <script data-ad-client="ca-pub-2852400661142864" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <script data-ad-client="ca-pub-2852400661142864" async
+        src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <!-- End google Adsense -->
-    
+
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-179713611-1"></script>
     <script>
@@ -68,7 +69,7 @@
                 {% else %}
                 <li class="nav-item active">
                     <a class="nav-link" href="{% url 'users:profile' %}"><img src="{{user.avatar.url}}" alt=""
-                            width="45" height="45" style="border-radius: 50%;">
+                            width="45" height="45" style="border-radius: 50%;" loading="lazy">
                         <span class="nav-label">{{ user.username }}</span></a>
                 </li>
                 {% endif %}
@@ -139,7 +140,7 @@
             <div class="modal-dialog modal-dialog-scrollable modal-xl">
                 <div class="modal-content">
                     <div class="modal-body">
-                        <div class="card">
+                        <div class="install-card">
                             <div class="left flex">
                                 <br>
                                 <h1 class="title">Orgachat. Perfect for</h1>
