Added a satisfication survey

--- a/chat/templates/chat/room.html
+++ b/chat/templates/chat/room.html
@@ -247,6 +247,7 @@
     </div>
 </div>
 
+<script>(function(t,e,s,o){var n,c,l;t.SMCX=t.SMCX||[],e.getElementById(o)||(n=e.getElementsByTagName(s),c=n[n.length-1],l=e.createElement(s),l.type="text/javascript",l.async=!0,l.id=o,l.src="https://widget.surveymonkey.com/collect/website/js/tRaiETqnLgj758hTBazgd0n20gVIxFU5pdnj7q5ydpIoQu0XNaYyt5ksYgBbb8pT.js",c.parentNode.insertBefore(l,c))})(window,document,"script","smcx-sdk");</script>
 <script>
     document.addEventListener('DOMContentLoaded', function () {
         // ---------------------------
