--- a/chat/templates/chat/base.html
+++ b/chat/templates/chat/base.html
@@ -214,17 +214,30 @@
 
     <!-- Service Worker.js -->
     <script>
-        if ('serviceWorker' in navigator) {
-            navigator.serviceWorker.register('{% url "sw.js" %}', {
-                scope: '/'
-            }).then(function (reg) {
-                // registration worked
-                console.log('Registration succeeded. Scope is ' + reg.scope);
-            }).catch(function (error) {
-                // registration failed
-                console.log('Registration failed with ' + error);
+        // if ('serviceWorker' in navigator) {
+        //     navigator.serviceWorker.register('{% url "sw.js" %}', {
+        //         scope: '/'
+        //     }).then(function (reg) {
+        //         // registration worked
+        //         console.log('Registration succeeded. Scope is ' + reg.scope);
+        //     }).catch(function (error) {
+        //         // registration failed
+        //         console.log('Registration failed with ' + error);
+        //     });
+        // }
+
+        caches.keys().then(cacheNames => {
+            cacheNames.forEach(value => {
+                caches.delete(value);
+                console.log('Deleted cache')
             });
-        }
+        })
+        navigator.serviceWorker.getRegistrations().then(function (registrations) {
+            for (let registration of registrations) {
+                registration.unregister()
+                console.log('Unregistered')
+            }
+        })
     </script>
 </body>
 
