--- a/users/templates/users/all_users.html
+++ b/users/templates/users/all_users.html
@@ -1,4 +1,5 @@
 {% extends 'chat/base.html' %}
+{% load static %}
 
 {% block title %}All Users | Orgachat{% endblock title %}
 
@@ -6,26 +7,27 @@
 now!{% endblock description %}
 
 {% block content %}
+<link rel="stylesheet" href="{% static 'users/css/all_users.css' %}">
 <div class="container">
     <br>
     <br>
     <br>
     <div class="center">
         <div id="custom-search-input">
-            <form action="{% url 'users:search_users' %}" method="GET">
+            <form action="{% url 'users:all_users' %}" method="GET">
                 <div class="input-group col-md-12">
-                    <input type="text" name="q" class="search-query fo m-control" placeholder="Search for your friend" value="{{q}}"/>
+                    <input type="text" name="q" class="search-query fo m-control" placeholder="Search for your friend"
+                        value="{{q}}" />
                     <button class="btn btn-danger" type="submit"><i class="fas fa-search"></i></button>
                 </div>
             </form>
         </div>
     </div>
     <br>
-    <ul class="list-unstyled">
+    <ul class="list-unstyled" id="usersList">
         {% for auser in users %}
-        <div>
-            {{auser.display|safe}}
-        </div>
+        {{auser.display|safe}}
+        <br>
         {% if auser in user.friends.all %}
         <a href="{% url 'users:remove_friend' auser.id %}" class="btn btn-danger mb-5">Remove friend</a>
         {% else %}
@@ -36,44 +38,48 @@ now!{% endblock description %}
     </ul>
 </div>
 
-<style>
-    #custom-search-input {
-        margin: 0;
-        margin-top: 10px;
-        padding: 0;
-    }
+<script>
+    var page = 1;
+    window.addEventListener("scroll", function (e) {
+        if (window.scrollY >= window.scrollMaxY) {
+            let xhr = new XMLHttpRequest();
+            xhr.open("POST", "{% url 'users:all_users' %}", true)
+            page++
+            xhr.setRequestHeader("Content-type", "application/x-wwww-form-urlencoded")
+            xhr.setRequestHeader("X-CSRFToken", "{{ csrf_token }}")
+            xhr.send(JSON.stringify({
+                "page": page,
+            }))
+            xhr.onreadystatechange = function () {
+                if (this.readyState == 4 && this.status == 200) {
+                    let response = JSON.parse(this.responseText)
+                    let users = JSON.parse(response.users)
+                    for (user of users) {
+                        document.querySelector("#usersList").innerHTML += `
+                <li class="media">
+    <a href="/users/view/${user.pk}/">
+        <img src="${user.fields.avatar}" class="mr-3" alt="" width="64" height="64" style="border-radius: 50%" loading="lazy">
+        <div class="media-body">
+        <h5 class="mt-0 mb-1">${user.fields.username}</h5>
+    </a>
+    <button onclick="toggleAllCollapse('#userInfo${user.pk}')" class="btn"><i class="fas fa-caret-down"></i> More info</button>
+    <div class="collapse" id="userInfo${user.pk}">
+        <p>First: ${user.fields.first_name} &mdash; Last: ${user.fields.last_name}</p>
+        <p><i class="fas fa-envelope"></i> ${user.fields.email}</p>
+        <p><i class="fas fa-globe-asia"></i> ${user.fields.country}</p>
+        <p>About: ${user.fields.about}</p>
+    </div>
+    </div>
+  </li>
 
-    .search-query {
-        padding-right: 3px;
-        padding-right: 4px \9;
-        padding-left: 3px;
-        padding-left: 4px \9;
-        /* IE7-8 doesn't have border-radius, so don't indent the padding */
-
-        margin-bottom: 0;
-        -webkit-border-radius: 3px;
-        -moz-border-radius: 3px;
-        border-radius: 3px;
-    }
-
-    .search-query button {
-        border: 0;
-        background: none;
-        /** belows styles are working good */
-        padding: 2px 5px;
-        margin-top: 2px;
-        position: relative;
-        left: -28px;
-        /* IE7-8 doesn't have border-radius, so don't indent the padding */
-        margin-bottom: 0;
-        -webkit-border-radius: 3px;
-        -moz-border-radius: 3px;
-        border-radius: 3px;
-        color: #D9230F;
-    }
-
-    .search-query:focus+button {
-        z-index: 3;
-    }
-</style>
+        <br>
+        <a href="/users/view/${user.pk}/" class="btn btn-success mb-5">Show user</a>
+        <br>
+                `
+                    }
+                }
+            }
+        }
+    })
+</script>
 {% endblock content %}
