--- a/chat/templates/chat/room.html
+++ b/chat/templates/chat/room.html
@@ -201,7 +201,8 @@
                 </button>
             </div>
             <div class="modal-body">
-                <form action="{% url 'chat:save_file_message' room.id %}" method="post" enctype="multipart/form-data" id="attachFilesForm">
+                <form action="{% url 'chat:save_file_message' room.id %}" method="post" enctype="multipart/form-data"
+                    id="attachFilesForm">
                     <div style="display: none;">
                         {% csrf_token %}
                         <label for="uploadVideo">Video</label>
@@ -247,8 +248,9 @@
     </div>
 </div>
 
-<script>(function(t,e,s,o){var n,c,l;t.SMCX=t.SMCX||[],e.getElementById(o)||(n=e.getElementsByTagName(s),c=n[n.length-1],l=e.createElement(s),l.type="text/javascript",l.async=!0,l.id=o,l.src="https://widget.surveymonkey.com/collect/website/js/tRaiETqnLgj758hTBazgd0n20gVIxFU5pdnj7q5ydpIoQu0XNaYyt5ksYgBbb8pT.js",c.parentNode.insertBefore(l,c))})(window,document,"script","smcx-sdk");</script>
 <script>
+    // Scroll to bottom
+    window.scrollTo(0, document.body.scrollHeight);
     document.addEventListener('DOMContentLoaded', function () {
         // ---------------------------
         // INTERFACE
