--- a/chat/static/chat/css/room.css
+++ b/chat/static/chat/css/room.css
@@ -252,7 +252,7 @@ body {
 .msg img {
     position: relative;
     display: block;
-    width: 600px;
+    width: 300px;
     border-radius: 5px;
     box-shadow: 0px 0px 3px #eee;
     transition: all .8s cubic-bezier(0.565, -0.260, 0.255, 1.410);
@@ -595,3 +595,5 @@ textarea:focus {
 /* ------------------ */
 /* MESSAGES */
 /* ------------------ */
+
+/* ----------------IMg------------ */
