--- a/chat/templates/chat/home.html
+++ b/chat/templates/chat/home.html
@@ -41,14 +41,16 @@
                 {% for room in area.room_set.all %}
                 <a href="{% url 'chat:room' room.id %}" id="openRoom{{room.id}}">
                     <div class="friend" onclick="document.querySelector('#openRoom{{room.id}}').click()"
-                    data-id="{{room.id}}">
-                    <img src="{{room.imageURL}}" loading="lazy" width="50" height="50" />
-                    <a href="#" type="button" style="font-size: 120%"
-                    class="badge badge-danger mt-4">{% if room.unread_count > 0 %}{{room.unread_count}}{% endif %}</a>
-                    <p>
-                        <strong>{{room.title}}</strong>
-                        <span>{{room.last_message}}</span>
-                    </p>
+                        data-id="{{room.id}}">
+                        <img src="{{room.imageURL}}" loading="lazy" width="50" height="50" />
+                        <a href="#" type="button" style="font-size: 120%"
+                            class="badge badge-danger mt-4">{% if room.unread_count > 0 %}{{room.unread_count}}{% endif %}</a>
+                        <p>
+                            <strong>{{room.title}} {% if room.type == "group" %} &mdash; <i class="fas fa-users"></i>
+                                {% endif %}</strong>
+                            <br>
+                            <span>{{room.last_message}}</span>
+                        </p>
                     </div>
                 </a>
                 <br>
@@ -74,7 +76,7 @@
             </h2>
         </div>
 
-        <div id="areaothers" class="collapse">
+        <div id="areaothers" class="{% if user.homepagearea_set.count > 0 %}collapse{% endif %}">
             <div id="chatbox">
                 {% if unorganized_rooms.count <= 0 %}
                 <p>Hold the chat room you want to add here. This area is currently Empty</p>
@@ -87,7 +89,9 @@
                         <a href="#" type="button" style="font-size: 120%"
                             class="badge badge-danger mt-4">{% if room.unread_count > 0 %}{{room.unread_count}}{% endif %}</a>
                         <p>
-                            <strong>{{room.title}}</strong>
+                            <strong>{{room.title}} {% if room.type == "group" %} &mdash; <i class="fas fa-users"></i>
+                                {% endif %}</strong>
+                            <br>
                             <span>{{room.last_message}}</span>
                         </p>
                     </div>
@@ -165,7 +169,15 @@
 </div>
 
 <link rel="stylesheet" href="{% static 'chat/css/home.css' %}">
-<script>(function(t,e,s,o){var n,c,l;t.SMCX=t.SMCX||[],e.getElementById(o)||(n=e.getElementsByTagName(s),c=n[n.length-1],l=e.createElement(s),l.type="text/javascript",l.async=!0,l.id=o,l.src="https://widget.surveymonkey.com/collect/website/js/tRaiETqnLgj758hTBazgd0n20gVIxFU5pdnj7q5ydpIoQu0XNaYyt5ksYgBbb8pT.js",c.parentNode.insertBefore(l,c))})(window,document,"script","smcx-sdk");</script>
+<script>
+    (function (t, e, s, o) {
+        var n, c, l;
+        t.SMCX = t.SMCX || [], e.getElementById(o) || (n = e.getElementsByTagName(s), c = n[n.length - 1], l = e
+            .createElement(s), l.type = "text/javascript", l.async = !0, l.id = o, l.src =
+            "https://widget.surveymonkey.com/collect/website/js/tRaiETqnLgj758hTBazgd0n20gVIxFU5pdnj7q5ydpIoQu0XNaYyt5ksYgBbb8pT.js",
+            c.parentNode.insertBefore(l, c))
+    })(window, document, "script", "smcx-sdk");
+</script>
 <script>
     document.addEventListener('DOMContentLoaded', function () {
         var longpress = false;
