--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -24,8 +24,23 @@
         </div>
         <button class="btn btn-outline-info" onclick="openModal('#updateProfile')"><i class="fas fa-edit"></i> Update
             Profile</button>
-        <!-- <button class="btn btn-outline-warning" onclick="openModal('#updatePrivacy')"><i class="fas fa-lock"></i> Update
-            Privacy</button> -->
+        <br>
+        <br>
+        <br>
+        <!-- AddToAny BEGIN -->
+        <div class="a2a_kit a2a_kit_size_32 a2a_default_style"
+            data-a2a-url="https://orgachat.com/users/add-friend/{{user.id}}/?utm_source=orgachat&amp;utm_medium=referral&amp;utm_campaign=invite_friend"
+            data-a2a-title="Orgachat Friend Invitation link">
+            <button href="" class="btn btn-success">
+                <a class="a2a_dd" id="profile-page" href="https://www.addtoany.com/share"></a> &nbsp; Invite a Friend
+            </button>
+        </div>
+        <script>
+            var a2a_config = a2a_config || {};
+            a2a_config.onclick = 1;
+        </script>
+        <script async src="https://static.addtoany.com/menu/page.js"></script>
+        <!-- AddToAny END -->
     </section>
     <br>
     <br>
@@ -123,4 +138,5 @@
         }
     }
 </script>
+
 {% endblock content %}
