--- a/users/templates/users/all_users.html
+++ b/users/templates/users/all_users.html
@@ -10,19 +10,17 @@ now!{% endblock description %}
 <link rel="stylesheet" href="{% static 'users/css/all_users.css' %}">
 <div class="container">
     <br>
-    <br>
-    <br>
-    <div class="center">
-        <div id="custom-search-input">
-            <form action="{% url 'users:all_users' %}" method="GET">
-                <div class="input-group col-md-12">
-                    <input type="text" name="q" class="search-query fo m-control" placeholder="Search for your friend"
-                        value="{{q}}" />
-                    <button class="btn btn-danger" type="submit"><i class="fas fa-search"></i></button>
-                </div>
-            </form>
-        </div>
+    <div id="custom-search-input">
+        <form action="{% url 'users:all_users' %}" method="GET" class="float-left">
+            <div class="input-group col-md-12">
+                <input type="text" name="q" class="search-query fo m-control" placeholder="Search for your friend"
+                    value="{{q}}" />
+                <button class="btn btn-danger" type="submit"><i class="fas fa-search"></i></button>
+            </div>
+        </form>
+        <small class="from-text text-muted" style="white-space: nowrap;">&nbsp; {{users_count}} results</small>
     </div>
+    <br>
     <br>
     <ul class="list-unstyled" id="usersList">
         {% for auser in users %}
