--- a/chat/templates/chat/base.html
+++ b/chat/templates/chat/base.html
@@ -1,5 +1,4 @@
 {% load static %}
-{% load webpush_notifications %}
 
 <!DOCTYPE html>
 <html lang="en">
@@ -84,18 +83,9 @@
                 <button class="btn" onclick="toggleDropdown('#mainDropdown')"><i class="fas fa-ellipsis-h"
                         style="font-size: 40px; color: #ff0000;"></i></button>
                 <div class="dropdown-menu" id="mainDropdown">
-                    <button class="dropdown-item btn {% if not user or not user.is_installed%} btn-install {% endif %}"
-                        onclick="openModal('#installOrgachat')"><i class="fas fa-download"></i> Install
-                        Orgachat</button>
+                    <button class="btn btn-outline-warning" id="pushButton" disabled>Enable Notifications</button>
                     <br>
-
-                    <button class="btn dropdown-item" style="position: relative;">
-                        <i class="fas fa-bell"
-                            style="font-size: 20px; margin-top: 10px; position: absolute; left: 0px;"></i>{% webpush_header %}{% webpush_button with_class="btn float-right" %}
-                    </button>
-
-                    <button type="button" class="btn" onclick="openModal('#addGroup')"><i class="fas fa-plus"></i> Add
-                        Group</button>
+                    <button class="btn" onclick="openModal('#addGroup')"><i class="fas fa-plus"></i> Add Group</button>
 
                     <!-- <a class="dropdown-item" href="https://www.surveymonkey.com/r/5WMYSSX" target="_blank">Feedback</a> -->
                     <hr>
@@ -116,8 +106,12 @@
                     <script async src="https://static.addtoany.com/menu/page.js"></script>
                     <!-- AddToAny END -->
                     {% endif %}
+                    <button class="dropdown-item btn" onclick="openModal('#installOrgachat')"><i
+                            class="fas fa-download"></i> Install
+                        Orgachat</button>
                     <a class="dropdown-item" href="{% url 'users:about' %}">About</a>
-                    <a class="dropdown-item" href="{% url 'users:about' %}"><i class="fas fa-question-circle"></i> Frequently Asked Questions</a>
+                    <!-- <a class="dropdown-item" href="{% url 'users:about' %}"><i class="fas fa-question-circle"></i>
+                        Frequently Asked Questions</a> -->
                     <form action="{% url 'logoutuser' %}" method="post">
                         {% csrf_token %}
                         <button type="submit" class="dropdown-item"
@@ -232,29 +226,149 @@
 
     <!-- Service Worker.js -->
     <script>
-        // if ('serviceWorker' in navigator) {
-        //     navigator.serviceWorker.register('{% url "sw.js" %}', {
-        //         scope: '/'
-        //     }).then(function (reg) {
-        //         // registration worked
-        //         console.log('Registration succeeded. Scope is ' + reg.scope);
-        //     }).catch(function (error) {
-        //         // registration failed
-        //         console.log('Registration failed with ' + error);
-        //     });
-        // }
+        const applicationServerPublicKey =
+            'BIQ_a_SUkvuMM3hzddLU7cqQWcBN7uk6QANR2sQci68sZ2CBAMf9uc5aMAJJErNngxx9Ey7WTyx4KtxZvJoUHRQ';
+        const pushButton = document.querySelector("#pushButton")
+        if ('serviceWorker' in navigator && 'PushManager' in window) {
+            console.log('Service Worker and Push is supported');
 
+            navigator.serviceWorker.register('{% url "sw.js" %}', {
+                    scope: '/'
+                })
+                .then(function (swReg) {
+                    console.log('Service Worker is registered', swReg);
+
+                    swRegistration = swReg;
+                    initializeUI();
+                })
+                .catch(function (error) {
+                    console.error('Service Worker Error', error);
+                });
+        } else {
+            console.warn('Push messaging is not supported');
+            pushButton.textContent = 'Push Not Supported';
+        }
+
+        function unsubscribeUser() {
+            swRegistration.pushManager.getSubscription()
+                .then(function (subscription) {
+                    if (subscription) {
+                        return subscription.unsubscribe();
+                    }
+                })
+                .catch(function (error) {
+                    console.log('Error unsubscribing', error);
+                })
+                .then(function () {
+                    updateSubscriptionOnServer(null);
+
+                    console.log('User is unsubscribed.');
+                    isSubscribed = false;
+
+                    updateBtn();
+                });
+        }
+
+        function subscribeUser() {
+            const applicationServerKey = urlB64ToUint8Array(applicationServerPublicKey);
+            swRegistration.pushManager.subscribe({
+                    userVisibleOnly: true,
+                    applicationServerKey: applicationServerKey
+                })
+                .then(function (subscription) {
+                    console.log('User is subscribed.');
+
+                    updateSubscriptionOnServer(subscription);
+
+                    isSubscribed = true;
+
+                    updateBtn();
+                })
+                .catch(function (err) {
+                    console.log('Failed to subscribe the user: ', err);
+                    updateBtn();
+                });
+        }
+
+        function updateSubscriptionOnServer(subscription) {
+            // TODO: Send subscription to application server
+
+            const subscriptionJson = document.querySelector('.js-subscription-json');
+            const subscriptionDetails =
+                document.querySelector('.js-subscription-details');
+
+            if (subscription) {
+                subscriptionJson.textContent = JSON.stringify(subscription);
+                subscriptionDetails.classList.remove('is-invisible');
+            } else {
+                subscriptionDetails.classList.add('is-invisible');
+            }
+        }
+
+        function urlB64ToUint8Array(base64String) {
+            const padding = '='.repeat((4 - base64String.length % 4) % 4);
+            const base64 = (base64String + padding)
+                .replace(/\-/g, '+')
+                .replace(/_/g, '/');
+
+            const rawData = window.atob(base64);
+            const outputArray = new Uint8Array(rawData.length);
+
+            for (let i = 0; i < rawData.length; ++i) {
+                outputArray[i] = rawData.charCodeAt(i);
+            }
+            return outputArray;
+        }
+
+        // Register to notifications
+        function initializeUI() {
+            pushButton.addEventListener('click', function () {
+                pushButton.disabled = true;
+                if (isSubscribed) {
+                    // TODO: Unsubscribe user
+                    unsubscribeUser();
+                } else {
+                    subscribeUser();
+                }
+            });
+            // Set the initial subscription value
+            swRegistration.pushManager.getSubscription()
+                .then(function (subscription) {
+                    isSubscribed = !(subscription === null);
+
+                    if (isSubscribed) {
+                        console.log('User IS subscribed.');
+                    } else {
+                        console.log('User is NOT subscribed.');
+                    }
+                    updateBtn();
+
+                });
+        }
+
+        function updateBtn() {
+            if (Notification.permission === 'denied') {
+                pushButton.textContent = 'Push Messaging Blocked.';
+                pushButton.disabled = true;
+                updateSubscriptionOnServer(null);
+                return;
+            }
+
+            if (isSubscribed) {
+                pushButton.textContent = 'Disable Push Messaging';
+            } else {
+                pushButton.textContent = 'Enable Push Messaging';
+            }
+
+            pushButton.disabled = false;
+        }
+
+        // Clear cache if any 
         caches.keys().then(cacheNames => {
             cacheNames.forEach(value => {
                 caches.delete(value);
                 console.log('Deleted cache')
             });
-        })
-        navigator.serviceWorker.getRegistrations().then(function (registrations) {
-            for (let registration of registrations) {
-                registration.unregister()
-                console.log('Unregistered')
-            }
         })
     </script>
 </body>
