--- a/info/templates/info/privacypolicy.html
+++ b/info/templates/info/privacypolicy.html
@@ -12,7 +12,7 @@
                     <div class="center">
                         <h1>Privacy Policy for Orgachat</h1>
                     </div>
-                    <p>At Orgachat, accessible from https://orgachat.pythonanywhere.com, one of our main priorities is
+                    <p>At Orgachat, accessible from https://www.orgachat.com, one of our main priorities is
                         the privacy of our visitors. This Privacy Policy document contains types of information that is
                         collected and recorded by Orgachat and how we use it.</p>
                     <p>If you have additional questions or require more information about our Privacy Policy, do not
