--- a/info/templates/info/termsandconditions.html
+++ b/info/templates/info/termsandconditions.html
@@ -17,7 +17,7 @@ and simple chat application{% endblock description %}
                         <h2>Introduction</h2>
                     </div>
                     <p>These Website Standard Terms and Conditions written on this webpage shall manage your use of our
-                        website, Orgachat accessible at https://orgachat.pythonanywhere.com.</p>
+                        website, Orgachat accessible at https://www.orgachat.com.</p>
                     <p>These Terms will be applied fully and affect to your use of this Website. By using this Website,
                         you agreed to accept all terms and conditions written in here. You must not use this Website if
                         you disagree with any of these Website Standard Terms and Conditions. These Terms and Conditions
