--- a/users/templates/users/signupuser.html
+++ b/users/templates/users/signupuser.html
@@ -91,7 +91,7 @@ organizing your chat{% endblock description %}
                                     </div>
                                     <p>These Website Standard Terms and Conditions written on this webpage shall manage
                                         your use of our
-                                        website, Orgachat accessible at https://orgachat.pythonanywhere.com.</p>
+                                        website, Orgachat accessible at https://www.orgachat.com.</p>
                                     <p>These Terms will be applied fully and affect to your use of this Website. By
                                         using this Website,
                                         you agreed to accept all terms and conditions written in here. You must not use
@@ -226,7 +226,7 @@ organizing your chat{% endblock description %}
                                     <div class="center">
                                         <h1>Privacy Policy for Orgachat</h1>
                                     </div>
-                                    <p>At Orgachat, accessible from https://orgachat.pythonanywhere.com, one of our main
+                                    <p>At Orgachat, accessible from https://www.orgachat.com, one of our main
                                         priorities is
                                         the privacy of our visitors. This Privacy Policy document contains types of
                                         information that is
